<resources>
    <string name="app_name">create</string>

    <string name="title">제목</string>
    <string name="image">사진</string>
    <string name="fresh_water">민물</string>
    <string name="sea_water">바닷물</string>
    <string name="size">CM</string>
    <string name="location">위치</string>
    <string name="date">날짜</string>
    <string name="fish_type">어종</string>
    <string name="content">내용</string>
    <string name="save">저장</string>
    <string name="edit">수정</string>

    <string name="input_title">제목을 입력해주세요</string>
    <string name="input_content">내용을 입력해주세요</string>
    <string name="input_fishtype">어종을 입력해주세요</string>

    <string name="selection_do">시/도/별을 \n선택해주세요</string>
    <string name="do_name">시/도/별</string>
    
    <string name="selection_city">시/군/구를 \n선택해주세요</string>
    <string name="city_name">시/군/구</string>

    <string name="selection_map">지도에서 \n위치를 \n선택해주세요</string>
    <string name="map">지도</string>

    <string name="location_setting_previous">이전</string>
    <string name="location_setting_next">다음</string>
    <string name="location_setting_setting">설정</string>
    
    <string name="location_marker_failure_message">"주소가 존재하지 않습니다"</string>

    <string name="can_not_get_image">사진을 가져오지 못했습니다.</string>

    <string name="toast_save_memo">작성한 메모가 저장되었습니다.</string>
    <string name="toast_update_memo">메모가 수정되었습니다.</string>

    <string name="permission_required">권한이 필요합니다.</string>
    <string name="required_to_import_image">사진을 가져오기 위해 필요합니다.</string>
    <string name="agreement">동의</string>

    <string name="not_exist_city_name">없음</string>
</resources>